--- a/EmployeeHelper.Models/EmployeeHelper.Models.csproj
+++ b/EmployeeHelper.Models/EmployeeHelper.Models.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmployeeModels\EmployeeCreate.cs" />
+    <Compile Include="EmployeeModels\EmployeeDetail.cs" />
     <Compile Include="EmployeeModels\EmployeeListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
