--- a/EmployeeHelper/EmployeeHelper.csproj
+++ b/EmployeeHelper/EmployeeHelper.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Employee\Create.cshtml" />
     <Content Include="Views\Employee\Details.cshtml" />
+    <Content Include="Views\Employee\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
