--- a/EmployeeHelper.Services/EmployeeHelper.Services.csproj
+++ b/EmployeeHelper.Services/EmployeeHelper.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmployeeService.cs" />
+    <Compile Include="OverTimeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
