--- a/EmployeeHelper/EmployeeHelper.csproj
+++ b/EmployeeHelper/EmployeeHelper.csproj
@@ -243,6 +243,9 @@
     <Content Include="Views\Employee\Delete.cshtml" />
     <Content Include="Views\OverTime\Index.cshtml" />
     <Content Include="Views\OverTime\Create.cshtml" />
+    <Content Include="Views\OverTime\Details.cshtml" />
+    <Content Include="Views\OverTime\Edit.cshtml" />
+    <Content Include="Views\OverTime\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
