--- a/EmployeeHelper.Services/EmployeeHelper.Services.csproj
+++ b/EmployeeHelper.Services/EmployeeHelper.Services.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BTServices.cs" />
     <Compile Include="EmployeeService.cs" />
     <Compile Include="OverTimeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
