added work model and view and action in controller

--- a/EmployeeHelper.Models/EmployeeHelper.Models.csproj
+++ b/EmployeeHelper.Models/EmployeeHelper.Models.csproj
@@ -66,6 +66,7 @@
     <Compile Include="OTModels\OverTimeDetail.cs" />
     <Compile Include="OTModels\OverTimeEdit.cs" />
     <Compile Include="OTModels\OverTimeListItem.cs" />
+    <Compile Include="OTModels\OverTimeWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
