--- a/EmployeeHelper/EmployeeHelper.csproj
+++ b/EmployeeHelper/EmployeeHelper.csproj
@@ -253,6 +253,7 @@
     <Content Include="Views\BulkTech\CompletedBy.cshtml" />
     <Content Include="Views\BulkTech\Details.cshtml" />
     <Content Include="Views\BulkTech\Delete.cshtml" />
+    <Content Include="Views\OverTime\Work.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
