--- a/EmployeeHelper.Models/EmployeeHelper.Models.csproj
+++ b/EmployeeHelper.Models/EmployeeHelper.Models.csproj
@@ -58,6 +58,10 @@
     <Compile Include="BTModels\BTDetail.cs" />
     <Compile Include="BTModels\BTEdit.cs" />
     <Compile Include="BTModels\BTListItem.cs" />
+    <Compile Include="BufferModels\BufferCreate.cs" />
+    <Compile Include="BufferModels\BufferDetail.cs" />
+    <Compile Include="BufferModels\BufferEdit.cs" />
+    <Compile Include="BufferModels\BufferListItem.cs" />
     <Compile Include="EmployeeModels\EmployeeCreate.cs" />
     <Compile Include="EmployeeModels\EmployeeDetail.cs" />
     <Compile Include="EmployeeModels\EmployeeEdit.cs" />
@@ -68,6 +72,10 @@
     <Compile Include="OTModels\OverTimeListItem.cs" />
     <Compile Include="OTModels\OverTimeWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TModels\TCreate.cs" />
+    <Compile Include="TModels\TDetail.cs" />
+    <Compile Include="TModels\TEdit.cs" />
+    <Compile Include="TModels\TListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -79,5 +87,6 @@
       <Name>EmployeeHelper.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
