--- a/EmployeeHelper.Services/EmployeeHelper.Services.csproj
+++ b/EmployeeHelper.Services/EmployeeHelper.Services.csproj
@@ -55,9 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BTServices.cs" />
+    <Compile Include="BufferService.cs" />
     <Compile Include="EmployeeService.cs" />
     <Compile Include="OverTimeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
