--- a/EmployeeHelper.Data/EmployeeHelper.Data.csproj
+++ b/EmployeeHelper.Data/EmployeeHelper.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IdentityModels.cs" />
     <Compile Include="OverTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shift.cs" />
     <Compile Include="TamcTymcSamples.cs" />
   </ItemGroup>
   <ItemGroup>
