--- a/EmployeeHelper.Services/EmployeeHelper.Services.csproj
+++ b/EmployeeHelper.Services/EmployeeHelper.Services.csproj
@@ -59,6 +59,7 @@
     <Compile Include="EmployeeService.cs" />
     <Compile Include="OverTimeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShiftServices.cs" />
     <Compile Include="TServices.cs" />
   </ItemGroup>
   <ItemGroup>
