--- a/EmployeeHelper/EmployeeHelper.csproj
+++ b/EmployeeHelper/EmployeeHelper.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OverTimeController.cs" />
+    <Compile Include="Controllers\ShiftController.cs" />
     <Compile Include="Controllers\TamcTymcController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -184,6 +185,17 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Assets\bg_edited.png" />
+    <Content Include="Content\Assets\Concrete.jpg" />
+    <Content Include="Content\Assets\Delete.png" />
+    <Content Include="Content\Assets\Edit.png" />
+    <Content Include="Content\Assets\Grass1382.jpg" />
+    <Content Include="Content\Assets\OldWoodPlank.jpg" />
+    <Content Include="Content\Assets\Sky.jpg" />
+    <Content Include="Content\Assets\WoodPlank.jpg" />
+    <Content Include="Content\Assets\GlassColor.jpg" />
+    <Content Include="Content\Assets\StoneWall.jpg" />
+    <Content Include="Content\Assets\Work.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -269,6 +281,11 @@
     <Content Include="Views\BufferReplacement\Edit.cshtml" />
     <Content Include="Views\BufferReplacement\CompletedBy.cshtml" />
     <Content Include="Views\BufferReplacement\Delete.cshtml" />
+    <Content Include="Views\Shift\Index.cshtml" />
+    <Content Include="Views\Shift\Create.cshtml" />
+    <Content Include="Views\Shift\Details.cshtml" />
+    <Content Include="Views\Shift\Edit.cshtml" />
+    <Content Include="Views\Shift\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
