--- a/EmployeeHelper.Contracts/EmployeeHelper.Contracts.csproj
+++ b/EmployeeHelper.Contracts/EmployeeHelper.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48F01AA3-8CE0-4EEA-8353-940DF396EAA8}</ProjectGuid>
+    <ProjectGuid>{33283AD2-EAA1-4B27-BECB-7A81975930B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EmployeeHelper.Services</RootNamespace>
-    <AssemblyName>EmployeeHelper.Services</AssemblyName>
+    <RootNamespace>EmployeeHelper.Contracts</RootNamespace>
+    <AssemblyName>EmployeeHelper.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,20 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.3\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,27 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BTServices.cs" />
-    <Compile Include="BufferService.cs" />
-    <Compile Include="EmployeeService.cs" />
-    <Compile Include="OverTimeServices.cs" />
+    <Compile Include="IOverTimeServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShiftServices.cs" />
-    <Compile Include="TServices.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EmployeeHelper.Contracts\EmployeeHelper.Contracts.csproj">
-      <Project>{33283ad2-eaa1-4b27-becb-7a81975930b3}</Project>
-      <Name>EmployeeHelper.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EmployeeHelper.Data\EmployeeHelper.Data.csproj">
-      <Project>{1aa4e6e7-6fbc-46f5-af6e-f5dcc14d97c5}</Project>
-      <Name>EmployeeHelper.Data</Name>
-    </ProjectReference>
     <ProjectReference Include="..\EmployeeHelper.Models\EmployeeHelper.Models.csproj">
       <Project>{56089415-3276-47be-ae66-976104597fc9}</Project>
       <Name>EmployeeHelper.Models</Name>
