--- a/EmployeeHelper.Data/EmployeeHelper.Data.csproj
+++ b/EmployeeHelper.Data/EmployeeHelper.Data.csproj
@@ -58,6 +58,11 @@
     <Compile Include="BulkTechSamples.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202105120042429_initCreate.cs" />
+    <Compile Include="Migrations\202105120042429_initCreate.Designer.cs">
+      <DependentUpon>202105120042429_initCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="OverTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shift.cs" />
@@ -66,6 +71,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202105120042429_initCreate.resx">
+      <DependentUpon>202105120042429_initCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
