--- a/EmployeeHelper.Contracts/EmployeeHelper.Contracts.csproj
+++ b/EmployeeHelper.Contracts/EmployeeHelper.Contracts.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBTServices.cs" />
+    <Compile Include="IBufferServices.cs" />
+    <Compile Include="IEmployeeServices.cs" />
     <Compile Include="IOverTimeServices.cs" />
+    <Compile Include="IShiftServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ITamcTymcServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EmployeeHelper.Models\EmployeeHelper.Models.csproj">
